--- a/sonya/projects.json
+++ b/sonya/projects.json
@@ -30,7 +30,7 @@
 		},
 		{
 			"title": "Финалист Regeneron ISEF",
-			"text": "Международный конкурс научных и инженерных работ школьников, проходящий в штате Калифорния, США. Ежегодно десятки миллионов школьников участвуют в научных ярмарках по всему миру, но только около 1800 человек проходит в финал. (Стала финалистом, но конкурс был отменён в связи с пандемией)",
+			"text": "Международный конкурс научных и инженерных работ школьников, проходящий в штате Калифорния, США. Ежегодно десятки миллионов школьников участвуют в научных ярмарках по всему миру, но только около 1800 человек проходит в финал. (Отменён из-за пандемии)",
 			"buttons": [
 				{
 					"text": "Сертификат",
@@ -40,7 +40,7 @@
 		},
 		{
 			"title": "Гран-при \"IT школа Samsung выбирает сильнейших\"",
-			"text": "Конкурс Android-приложений среди выпускников \"IT школы Samsung\". Первое место среди всех категорий",
+			"text": "Конкурс Android-приложений среди выпускников \"IT школы Samsung\". Первое место среди всех категорий.",
 			"buttons": [
 				{
 					"text": "Сертификат",
