--- a/sonya/projects.json
+++ b/sonya/projects.json
@@ -30,7 +30,7 @@
 		},
 		{
 			"title": "Финалист Regeneron ISEF",
-			"text": "Международный конкурс научных и инженерных работ школьников, проходящий в штате Калифорния, США. Ежегодно десятки миллионов школьников участвуют в научных ярмарках по всему миру, но только около 1800 человек проходит в финал. (Отменён из-за пандемии)",
+			"text": "Международный конкурс научных и инженерных работ школьников, проходящий в США. Ежегодно десятки миллионов школьников участвуют в научных ярмарках по всему миру, но только около 1800 человек проходит в финал.",
 			"buttons": [
 				{
 					"text": "Сертификат",
