--- a/sonya/projects.json
+++ b/sonya/projects.json
@@ -29,7 +29,7 @@
 			]
 		},
 		{
-			"title": "Финалист Regeneron ISEF",
+			"title": "Финалист ISEF",
 			"text": "Международный конкурс научных и инженерных работ школьников, проходящий в США. Ежегодно десятки миллионов школьников участвуют в научных ярмарках по всему миру, но только около 1800 человек проходит в финал.",
 			"buttons": [
 				{
