--- a/sonya/projects.json
+++ b/sonya/projects.json
@@ -49,6 +49,16 @@
 			]
 		},
 		{
+			"title": "Резюме-платформа Кружкового Движения",
+			"text": "Наша команда (из двух человек) разработала концепцию, дизайн и соответствующий функционал сайта на коммерческой основе.",
+			"buttons": []
+		},
+		{
+			"title": "НТИ БДиМО",
+			"text": "Являюсь призером конкурса НТИ 2021 по профилю Большие Данные и Машинное Обучение.",
+			"buttons": []
+		},
+		{
 			"title": "Хакатоны",
 			"text": "Участвую в местных хакатонах Android-разработки. Например, команда, в которой я являлась тимлидом, разработала приложение, позволяющее удаленно собирать данные о состоянии теплицы и управлять ее системами полива.",
 			"buttons": [
