--- a/andrew/projects.json
+++ b/andrew/projects.json
@@ -1,12 +1,12 @@
 {
 	"cards": [
 		{
-			"title": "Etiam",
-			"text": "Web-сервис, реализующий онлайн презентации в новом интересном формате: Показ слайдов происходит в браузере на каждом отдельном подключённом к определённой презентации устройстве. Это - мой основной проект, сейчас находится в очень активной разработке.",
+			"title": "Immersinity",
+			"text": "Веб-сервис, реализующий онлайн презентации в иммерсивном формате: Показ слайдов происходит в браузере на каждом отдельном подключённом к определённой презентации устройстве. Это - мой основной проект, сейчас находится в очень активной разработке.",
 			"buttons": [
 				{
 					"text": "Сайт",
-					"link": "https://etiam.live"
+					"link": "https://http://immersinity.com"
 				},
 				{
 					"text": "Описание",
@@ -16,7 +16,7 @@
 		},
 		{
 			"title": "Концепция сервиса для КД",
-			"text": "В рамках проекта Кружкового Движения kruzhok.pro была разработана концепция веб-приложения по построению портфолио участника КД. Решение нашей команды из двух человек было выбрано наилучшим",
+			"text": "В рамках проекта Кружкового Движения kruzhok.pro я учавствовал в разработке концепции веб-приложения по построению портфолио участника КД",
 			"buttons": [
 				{
 					"text": "Google Doc",
@@ -26,7 +26,7 @@
 		},
 		{
 			"title": "Фриланс",
-			"text": "Несколько месяцев фрилансил, создавая игры на Unity. За это время было сделано около шести игр различного масштаба и сложности для заказчиков из самых разных стран мира",
+			"text": "Я несколько месяцев фрилансил, создавая игры на Unity. За это время было сделано около шести игр различного масштаба и сложности для заказчиков из самых разных стран мира",
 			"buttons": [
 				{
 					"text": "Fiverr",
@@ -51,12 +51,7 @@
 		{
 			"title": "ЗаботаФон",
 			"text": "Приложение, защищающие пожилых людей от телефонного мошенничества. Основная функция - блокиратор звонков, работающий по принципу белого списка, то есть все вызовы с номеров, не указаных пользователем, будут автоматически блокироваться приложением",
-			"buttons": [
-				{
-					"text": "Google Play",
-					"link": "https://play.google.com/store/apps/details?id=com.andrewlevada.carephone"
-				}
-			]
+			"buttons": []
 		},
 		{
 			"title": "Нейронные сети",
