--- a/andrew/projects.json
+++ b/andrew/projects.json
@@ -2,11 +2,11 @@
 	"cards": [
 		{
 			"title": "Immersinity",
-			"text": "Веб-сервис, реализующий онлайн презентации в иммерсивном формате: Показ слайдов происходит в браузере на каждом отдельном подключённом к определённой презентации устройстве. Это - мой основной проект, сейчас находится в очень активной разработке.",
+			"text": "Веб-сервис, реализующий онлайн презентации в иммерсивном формате: показ слайдов происходит в браузере на каждом отдельном подключённом к определённой презентации устройстве. Это - мой основной проект, сейчас находится в активной разработке.",
 			"buttons": [
 				{
 					"text": "Сайт",
-					"link": "https://http://immersinity.com"
+					"link": "https://immersinity.com"
 				},
 				{
 					"text": "Описание",
