more minor fixes

--- a/andrew/projects.json
+++ b/andrew/projects.json
@@ -16,7 +16,7 @@
 		},
 		{
 			"title": "Концепция сервиса для КД",
-			"text": "В рамках проекта Кружкового Движения kruzhok.pro я учавствовал в разработке концепции веб-приложения по построению портфолио участника КД",
+			"text": "В рамках проекта Кружкового Движения kruzhok.pro я участвовал в разработке концепции веб-приложения по построению портфолио участника КД",
 			"buttons": [
 				{
 					"text": "Google Doc",
