Added new projects

--- a/sonya/projects.json
+++ b/sonya/projects.json
@@ -29,15 +29,35 @@
 			]
 		},
 		{
+			"title": "Курс для IT школы Иннополиса",
+			"text": "Вместе с напарником я создала и провела офлайн мастер-класс по искусственному интеллекту в Университете Иннополис в рамках курса «Умные выходные». Мы подготовили интерактивные материалы для изучения Python и разработали игровой симулятор ИИ в Unity (за эту часть отвечал я). Всего мы провели этот мастер-класс в 4 группах по 25 человек в каждой."
+			"buttons": [
+				{
+					"text": "Notion",
+					"link": "https://instinctive-cobalt-e47.notion.site/AI-class-for-Inno-b699d08069384d87925485f0f5d1543a"
+				}
+			]
+		{
 			"title": "Резюме-платформа Кружкового Движения",
 			"text": "Наша команда (из двух человек) разработала концепцию, дизайн и соответствующий функционал сайта на коммерческой основе.",
-			"buttons": []
+			"buttons": [
+				{
+					"text": "Концепция",
+					"link": "https://docs.google.com/document/d/1IZw8p6Hm9-K1KYvuyR4HUJ7QVF0uWKGMwDZOK9_W4BQ/edit"
+				}
+			]
 		},
 		{
-			"title": "НТИ БДиМО",
-			"text": "Являюсь призером конкурса НТИ 2021 по профилю Большие Данные и Машинное Обучение.",
-			"buttons": []
+			"title": "Crew Street (стартап)",
+			"text": "Веб-приложение, которое помогает компаниям находить идеальных кандидатов на вакансии младшего специалиста, а также помогает начинающим разработчикам найти свою первую работу.",
+			"buttons": [
+				{
+					"text": "Лэндинг",
+					"link": "https://crewstreet.ru/"
+				}
+			]
 		},
+
 		{
 			"title": "Хакатоны",
 			"text": "Участвую в местных хакатонах Android-разработки. Например, команда, в которой я являлась тимлидом, разработала приложение, позволяющее удаленно собирать данные о состоянии теплицы и управлять ее системами полива.",
