--- a/sonya/projects.json
+++ b/sonya/projects.json
@@ -30,7 +30,7 @@
 		},
 		{
 			"title": "Курс для IT школы Иннополиса",
-			"text": "Вместе с напарником я создала и провела офлайн мастер-класс по искусственному интеллекту в Университете Иннополис в рамках курса «Умные выходные». Мы подготовили интерактивные материалы для изучения Python и разработали игровой симулятор ИИ в Unity (за эту часть отвечал я). Всего мы провели этот мастер-класс в 4 группах по 25 человек в каждой.",
+			"text": "Вместе с напарником я создала и провела офлайн мастер-класс по искусственному интеллекту в Университете Иннополис в рамках курса «Умные выходные». Мы подготовили интерактивные материалы для изучения Python и разработали игровой симулятор ИИ в Unity. Всего мы провели этот мастер-класс в 4 группах по 25 человек в каждой.",
 			"buttons": [
 				{
 					"text": "Notion",
