--- a/sonya/projects.json
+++ b/sonya/projects.json
@@ -2,7 +2,7 @@
 	"cards": [
 		{
 			"title": "AI course for Innopolis' summer school",
-			"text": "Together with my partner, we have created and taught an offline master class on AI at Innopolis University as a part of the \"Smart Vacation\" summer course. We have prepared interactive materials for learning Python and developed an AI game simulator in Unity.",
+			"text": "Together with my partner, we have created and taught an offline AI masterclass at Innopolis University as a part of the \"Smart Vacation\" summer course. We have prepared interactive materials for learning Python and developed an AI game simulator in Unity.",
 			"buttons": [
 				{
 					"text": "Notion",
